Adding the navbar

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Quiz - Easy Tutorials</title>
+        <title>Quiz - CFG Introduction to Javascript Course</title>
         <link rel ="stylesheet" href="style.css">
     </head>
     <body>
+            <div class="topnav">
+                <a class="active" href="./index.html">Quiz</a>
+                <a href="./scoreboard.html">Scoreboard</a>
+              </div>
         <div class ="app">
             <h1>Sports Quiz</h1>
         <div class="quiz">
