closing the div tag for app-scorebaord

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -11,6 +11,7 @@
           </div>
     <div class ="app">
         <h1>Scoreboard</h1>
+    </div>
         <script src ="script.js"></script>
     </body>
 </html>
