add pictures and confetti

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
                 <a href="./scoreboard.html">Scoreboard</a>
               </div>
         <div class ="app">
+            <div class ="pics">
+                <img id = "question_pics">
+            </div>
             <h1>Sports Quiz</h1>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
@@ -19,6 +22,7 @@
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
+            <script id= "confetti-explosion" ></script>
             <button id="next-btn">next</button>
         </div>
         <script src ="script.js"></script>
