Alligning start page colour scheme with app

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Quiz - CFG Introduction to Javascript Course</title>
+        <title>Sports Quiz</title>
         <link rel ="stylesheet" href="style.css">
     </head>
     <body>
             <div class="topnav">
+                <a href="./startpage.html">Home</a>
                 <a class="active" href="./index.html">Quiz</a>
                 <a href="./scoreboard.html">Scoreboard</a>
               </div>
