--- a/startpage.html
+++ b/startpage.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sport Quizt</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="start.css">
     <script src="https://kit.fontawesome.com/6f601c1431.js" crossorigin="anonymous"></script>
 </head>
 <body>
    <div class="container">
     <div id="home" class="flex-column flex-center">
-        <h1>Ready to test your knowledge?</h1>
-        <a href="http://127.0.0.1:5500/project01/project.html" class="btn">Play</a>
-        <a href="/highscores.html" id="highscore-btn" class="btn">High Scores<i class="fa-solid fa-medal"></i></a>
+        <h1>Ready to test your Sports knowledge?</h1>
+        <a href="./index.html" class="btn">Play</a>
+        <a href="scoreboard.html" id="highscore-btn" class="btn">Scoreboard<i class="fa-solid fa-medal"></i></a>
     </div>
    </div> 
 </body>
