--- a/scoreboard.html
+++ b/scoreboard.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Quiz - Easy Tutorials</title>
+        <title>Scoreboard</title>
         <link rel ="stylesheet" href="style.css">
     </head>
     <body>
         <div class="topnav">
+            <a href="./startpage.html">Home</a>
             <a href="./index.html">Quiz</a>
             <a class = "active" href="./scoreboard.html">Scoreboard</a>
           </div>
