--- a/end.html
+++ b/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="start.css">
+    <link rel="stylesheet" href="end.css">
     <script src="https://kit.fontawesome.com/6f601c1431.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -12,12 +12,13 @@
     <div id="end" class="flex-center flex-column">
         <h1 id="finalScore">0</h1>
         <form class="end-form-container">
-            <h2 id="end-text">Enter your name below to save your score!</h2>
+            <h1 id="end-text">Enter your name below to save your score!</h>
             <input type="text" name="name" id="username" placeholder="Enter your name">
-            <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
+            <button class="btn" id="saveScoreBtn" type="submit">Save</button>
         </form>
-        <a href="http://127.0.0.1:5500/tryprojectquiz2/game.html" class="btn">Play Again</a>
-        <a href="http://127.0.0.1:5500/tryprojectquiz2/projectquiz2.html" class="btn">Go Home<i class="fa-solid fa-house-user"></i></a>
+        <a href="http://127.0.0.1:5500/main_game.html" class="btn">Play Again</a>
+        <a href="http://127.0.0.1:5500/start.html" class="btn">Go Home<i class="fa-solid fa-house-user"></i></a>
+        <a href="http://127.0.0.1:5500/scoreboard.html" class="btn">Scoreboard</a>
     </div>
    </div> 
    <script src="end.js"></script>
