--- a/main_game.html
+++ b/main_game.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Sports Quiz</title>
-        <link rel ="stylesheet" href="style.css">
+        <link rel ="stylesheet" href="main_game.css">
     </head>
     <body>
             <div class="topnav">
-                <a href="./startpage.html">Home</a>
-                <a class="active" href="./index.html">Quiz</a>
-                <a href="./scoreboard.html">Scoreboard</a>
+                <a href="start.html">Home</a>
+                <a class="active" href="main_game.html">Quiz</a>
+                <a href="scoreboard.html">Scoreboard</a>
               </div>
         <div class ="app">
             <div class ="pics">
@@ -26,6 +26,6 @@
             <script id= "confetti-explosion" ></script>
             <button id="next-btn">next</button>
         </div>
-        <script src ="script.js"></script>
+        <script src ="main_game.js"></script>
     </body>
 </html>
