--- a/scoreboard.html
+++ b/scoreboard.html
@@ -2,17 +2,18 @@
 <html>
     <head>
         <title>Scoreboard</title>
-        <link rel ="stylesheet" href="style.css">
+        <link rel ="stylesheet" href="main_game.css">
     </head>
     <body>
         <div class="topnav">
-            <a href="./startpage.html">Home</a>
-            <a href="./index.html">Quiz</a>
-            <a class = "active" href="./scoreboard.html">Scoreboard</a>
+            <a href="start.html">Home</a>
+            <a href="main_game.html">Quiz</a>
+            <a class = "active" href="scoreboard.html">Scoreboard</a>
           </div>
     <div class ="app">
         <h1>Scoreboard</h1>
+        <h1 id="highScoresList">Scores go here</h1>
     </div>
-        <script src ="script.js"></script>
+        <script src ="scoreboard.js"></script>
     </body>
 </html>
