--- a/start.html
+++ b/start.html
@@ -11,7 +11,7 @@
    <div class="container">
     <div id="home" class="flex-column flex-center">
         <h1>Ready to test your Sports knowledge?</h1>
-        <a href="./index.html" class="btn">Play</a>
+        <a href="main_game.html" class="btn">Play</a>
         <a href="scoreboard.html" id="highscore-btn" class="btn">Scoreboard<i class="fa-solid fa-medal"></i></a>
     </div>
    </div> 
