--- a/end.html
+++ b/end.html
@@ -12,7 +12,7 @@
     <div id="end" class="flex-center flex-column">
         <h1 id="finalScore">0</h1>
         <form class="end-form-container">
-            <h1 id="end-text">Enter your name below to save your score!</h>
+            <h2 id="end-text">Enter your name below to save your score!</h2>
             <input type="text" name="name" id="username" placeholder="Enter your name">
             <button class="btn" id="saveScoreBtn" type="submit">Save</button>
         </form>
