--- a/end.html
+++ b/end.html
@@ -16,9 +16,9 @@
             <input type="text" name="name" id="username" placeholder="Enter your name">
             <button class="btn" id="saveScoreBtn" type="submit">Save</button>
         </form>
-        <a href="http://127.0.0.1:5500/main_game.html" class="btn">Play Again</a>
-        <a href="http://127.0.0.1:5500/start.html" class="btn">Go Home<i class="fa-solid fa-house-user"></i></a>
-        <a href="http://127.0.0.1:5500/scoreboard.html" class="btn">Scoreboard</a>
+        <a href="main_game.html" class="btn">Play Again</a>
+        <a href="start.html" class="btn">Go Home<i class="fa-solid fa-house-user"></i></a>
+        <a href="scoreboard.html" class="btn">Scoreboard</a>
     </div>
    </div> 
    <script src="end.js"></script>
