change to index

--- a/end.html
+++ b/end.html
@@ -17,7 +17,7 @@
             <button class="btn" id="saveScoreBtn" type="submit">Save</button>
         </form>
         <a href="main_game.html" class="btn">Play Again</a>
-        <a href="start.html" class="btn">Go Home<i class="fa-solid fa-house-user"></i></a>
+        <a href="index.html" class="btn">Go Home<i class="fa-solid fa-house-user"></i></a>
         <a href="scoreboard.html" class="btn">Scoreboard</a>
     </div>
    </div> 
