--- a/scoreboard.html
+++ b/scoreboard.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="topnav">
-            <a href="start.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="main_game.html">Quiz</a>
             <a class = "active" href="scoreboard.html">Scoreboard</a>
           </div>
