--- a/main_game.html
+++ b/main_game.html
@@ -6,7 +6,7 @@
     </head>
     <body>
             <div class="topnav">
-                <a href="start.html">Home</a>
+                <a href="index.html">Home</a>
                 <a class="active" href="main_game.html">Quiz</a>
                 <a href="scoreboard.html">Scoreboard</a>
               </div>
