--- a/end.html
+++ b/end.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Score</title>
     <link rel="stylesheet" href="end.css">
     <script src="https://kit.fontawesome.com/6f601c1431.js" crossorigin="anonymous"></script>
 </head>
